# kite-feed

./: .cursorrules  .flake8  .gitignore  CHANGES_SUMMARY.md  EXAMPLES.md  README.md  THUMBNAIL_IMPLEMENTATION.md  agents.md  check.sh  check_all.py  config.json  feed.xml  generate_html.py  generate_rss.py  generate_utils.py  index.html  process_kite.py  process_workflow.py  processed_stories.json  pyproject.toml  setup.sh  uv_scripts.py  validate.py  verify_thumbnails.py
.cursor/: config.json  environment.json
stories/: ai-boom-reshapes-wealth-media-and-security-outlook.html  ai-driven-stock-surge-lifts-us-tech-fortunes-in-20.html  alphabet-agrees-475-billion-intersect-power-acquis.html  amazon-centralizes-ai-and-quantum-under-new-leader.html  amazon-in-talks-to-invest-over-%2410bn-in-openai.html  annas-archive-claims-300tb-spotify-scrape-torrents.html  asia-shares-trade-mixed-as-gold-silver-set-records.html  astronomers-spotlight-milky-ways-christmas-tree-cl.html  astronomers-spotlight-ngc-2264-as-cosmic-christmas.html  astronomy-outlets-map-christmas-night-sky-targets.html  australia-plans-tougher-hate-speech-laws-after-bon.html  bc-highway-3-reopens-with-detour-traffic-controls.html  bc-reopens-highway-3-detour-after-washout.html  big-tech-moves-120bn-ai-data-centre-debt-off-books.html  brazil-ex-president-bolsonaro-has-hernia-surgery-b.html  call-of-duty-co-creator-vince-zampella-dies-at-55.html  canada-health-minister-warns-against-relying-on-us.html  canada-records-rare-quarterly-population-decline-a.html  canadian-doctors-urge-flu-shots-as-h3n2-strain-sur.html  canadians-blend-boxing-day-shopping-with-winter-ou.html  carney-calls-zelenskyy-ahead-of-trump-florida-talk.html  cbs-orders-takedown-after-global-streams-pulled-se.html  china-sanctions-20-us-defense-firms-over-taiwan.html  community-posts-track-2025-surge-in-llm-releases.html  developers-publish-new-tools-for-steering-llms-saf.html  developers-refine-ai-coding-agents-with-new-contro.html  education-department-to-resume-student-loan-wage-g.html  elections-alberta-approves-citizen-question-on-alb.html  environment-canada-issues-christmas-storm-warnings.html  (+87 more)
templates/: index.html  rss.xml  (+2 more)
(+3 files in other folders)
