[project]
name = "kite-feed-generator"
version = "0.1.0"
description = "Generate HTML and RSS feeds from Kagi Kite stories"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "jinja2>=3.1.0",
]

[project.scripts]
process = "process_workflow:main"


[project.optional-dependencies]
dev = [
    "ruff>=0.14.10",
    "ty>=0.0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = [
    "process_kite.py",
    "generate_rss.py",
    "generate_html.py",
    "generate_utils.py",
    "process_workflow.py",
]

[tool.ruff]
line-length = 127
target-version = "py311"
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "stories",
    "dist",
    "build",
    ".eggs",
    ".mypy_cache",
    ".tox",
]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
    "ruff>=0.14.10",
    "ty>=0.0.4",
]
